# QQListener

./: .gitignore  1.iss  DEVELOPMENT.md  LICENSE  QQListener.7z  README.md  main.py  mainfinale.py  maingui copy - コピー.py  maingui copy.py  maingui.py  maingui2.py  mainsdk.py  notify copy.json  notify.json  notify.py  pyproject.toml  setting.json  test.py  ttstest.py  welcome.py
src/: __init__.py  main.py
src/core/: app.py  logging.py  settings.py  signals.py  worker.py
src/ui/: notify_manager.py  notify_window.py  settings_window.py  tray_icon.py
src/utils/: message_processor.py  tts.py
translations/: en-US.qm  en-US.ts  en_US.ts  ja_JP.qm  ja_JP.ts
