[project]
name = "qqlistener"
version = "0.1.0"
description = "QQ通知监控软件"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.7",
    "psutil>=7.2.2",
    "pygame>=2.6.1",
    "pyside6>=6.10.2",
    "pyttsx3>=2.99",
    "pywin32>=311",
    "qt-material>=2.17",
    "uiautomation>=2.0.29",
    "winsdk>=1.0.0b10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["src"]
